k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: hopskipdrive-api
  namespace: hopskipdrive
  labels:
    app.kubernetes.io/name: hopskipdrive-api
spec:
  selector:
    app.kubernetes.io/name: hopskipdrive-api
  ports:
    - name: http
      port: 80
      targetPort: http
